comment out local segregation for now

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@ of self-employment are of interest.</p>-->
     </p>
     <ol>
       <li><h4><a href="basic/ElbersTotalSegregation.html">Total segregation</a></h4></li>
-      <li><h4><a href="basic/ElbersLocalSegregation.html">Local segregation</a></h4>
+      <!--<li><h4><a href="basic/ElbersLocalSegregation.html">Local segregation</a></h4>
       <p>Between 1985 and 2005 the share of women designers rose from 40.3% to 42.5%, 
         yet structural segregation of designers also increased. How can that be?
-      </p></li>
+      </p></li>-->
     </ol>
   </li>
     </ol>
