add drill down spec tech

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ of self-employment are of interest.</p>-->
       <p>Between 1985 and 2005 the share of women designers rose from 40.3% to 42.5%, 
         yet structural segregation of designers also increased. How can that be?
       </p></li>-->
+      <li><h4><a href="basic/ElbersDrillDownSpecTech.html">Drill down: A. Specialists and technicians</a></h4></li>
     </ol>
   </li>
     </ol>
