--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -270,6 +270,15 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         </tr>
     </tbody>
     </table>
+    <figure>
+        <img src="images/SpecTechSegregation01.png"
+              loading="lazy" alt="A. Specialists and 
+              technicians 1985-2005" width="600" height="900" />
+            <figcaption>Occupational gender segregation 1985-2005: A. Specialists and 
+                technicians
+            </figcaption>
+    </figure>
+    
 </main>
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
