--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -270,6 +270,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         </tr>
     </tbody>
     </table>
+    <p>Changes between 1985 and 2005 by mid-level group</p>
     <figure>
         <img src="images/SpecTechSegregation01.png"
               loading="lazy" alt="A. Specialists and 
@@ -278,8 +279,305 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
                 technicians
             </figcaption>
     </figure>
-    
-</main>
+    <p>Decomposing mid-level group changes</p>
+    <figure>
+        <img src="images/SpecTechSegregation01.png"
+              loading="lazy" alt="A. Specialists and 
+              technicians 1985-2005" width="600" height="900" />
+            <figcaption>Occupational gender segregation 1985-2005: A. Specialists and 
+                technicians
+            </figcaption>
+    </figure>
+    <table class="table" style="margin-left: auto; margin-right: auto;">
+        <thead>
+       <tr>
+       <th style="empty-cells: hide;border-bottom:hidden;" colspan="1"></th>
+       <th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="3"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">M</div></th>
+       <th style="empty-cells: hide;border-bottom:hidden;" colspan="2"></th>
+       <th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">Marginal</div></th>
+       <th style="empty-cells: hide;border-bottom:hidden;" colspan="1"></th>
+       </tr>
+         <tr>
+          <th style="text-align:left;"> Component </th>
+          <th style="text-align:right;"> 1985 </th>
+          <th style="text-align:right;"> 2005 </th>
+          <th style="text-align:right;"> Diff. </th>
+          <th style="text-align:right;"> Appearing </th>
+          <th style="text-align:right;"> Disappearing </th>
+          <th style="text-align:right;"> Occupation </th>
+          <th style="text-align:right;"> Gender </th>
+          <th style="text-align:left;"> Structural </th>
+         </tr>
+        </thead>
+       <tbody>
+         <tr>
+          <td style="text-align:left;"> Specialists/technicians total </td>
+          <td style="text-align:right;"> 0.317 </td>
+          <td style="text-align:right;"> 0.283 </td>
+          <td style="text-align:right;"> -0.034 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.013 </td>
+          <td style="text-align:right;"> -0.005 </td>
+          <td style="text-align:left;"> -0.042 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-1%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-38%) </td>
+          <td style="text-align:right;font-size: 14px;"> (14%) </td>
+          <td style="text-align:left;font-size: 14px;"> (125%) </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;"> Between mid-level groups </td>
+          <td style="text-align:right;"> 0.188 </td>
+          <td style="text-align:right;"> 0.180 </td>
+          <td style="text-align:right;"> -0.007 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.002 </td>
+          <td style="text-align:right;"> 0.020 </td>
+          <td style="text-align:left;"> -0.029 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-29%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-272%) </td>
+          <td style="text-align:left;font-size: 14px;"> (402%) </td>
+         </tr>
+         <tr grouplength="19"><td colspan="9" style="border-bottom: 1px solid;"><strong>Within mid-level groups (sorted by Diff.)</strong></td></tr>
+       <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 111 Entertainment </td>
+          <td style="text-align:right;"> 0.232 </td>
+          <td style="text-align:right;"> 0.145 </td>
+          <td style="text-align:right;"> -0.088 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> -0.013 </td>
+          <td style="text-align:right;"> -0.000 </td>
+          <td style="text-align:left;"> -0.075 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;font-size: 14px;" indentlevel="1">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (14%) </td>
+          <td style="text-align:right;font-size: 14px;"> (0%) </td>
+          <td style="text-align:left;font-size: 14px;"> (86%) </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 103 Healthcare </td>
+          <td style="text-align:right;"> 0.314 </td>
+          <td style="text-align:right;"> 0.226 </td>
+          <td style="text-align:right;"> -0.087 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> -0.016 </td>
+          <td style="text-align:right;"> -0.017 </td>
+          <td style="text-align:left;"> -0.054 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;font-size: 14px;" indentlevel="1">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (19%) </td>
+          <td style="text-align:right;font-size: 14px;"> (19%) </td>
+          <td style="text-align:left;font-size: 14px;"> (62%) </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 112 Tutors and sports </td>
+          <td style="text-align:right;"> 0.109 </td>
+          <td style="text-align:right;"> 0.048 </td>
+          <td style="text-align:right;"> -0.061 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> -0.012 </td>
+          <td style="text-align:right;"> -0.001 </td>
+          <td style="text-align:left;"> -0.048 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;font-size: 14px;" indentlevel="1">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (19%) </td>
+          <td style="text-align:right;font-size: 14px;"> (2%) </td>
+          <td style="text-align:left;font-size: 14px;"> (79%) </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 104 Social </td>
+          <td style="text-align:right;"> 0.137 </td>
+          <td style="text-align:right;"> 0.106 </td>
+          <td style="text-align:right;"> -0.031 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> -0.004 </td>
+          <td style="text-align:right;"> 0.012 </td>
+          <td style="text-align:left;"> -0.039 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;font-size: 14px;" indentlevel="1">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (14%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-39%) </td>
+          <td style="text-align:left;font-size: 14px;"> (125%) </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 110 Arts, Design, Photo </td>
+          <td style="text-align:right;"> 0.043 </td>
+          <td style="text-align:right;"> 0.016 </td>
+          <td style="text-align:right;"> -0.028 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> -0.002 </td>
+          <td style="text-align:right;"> 0.005 </td>
+          <td style="text-align:left;"> -0.031 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;font-size: 14px;" indentlevel="1">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (8%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-18%) </td>
+          <td style="text-align:left;font-size: 14px;"> (110%) </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 107 Teachers </td>
+          <td style="text-align:right;"> 0.090 </td>
+          <td style="text-align:right;"> 0.079 </td>
+          <td style="text-align:right;"> -0.012 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.003 </td>
+          <td style="text-align:right;"> -0.003 </td>
+          <td style="text-align:left;"> -0.011 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;font-size: 14px;" indentlevel="1">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-26%) </td>
+          <td style="text-align:right;font-size: 14px;"> (29%) </td>
+          <td style="text-align:left;font-size: 14px;"> (96%) </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 102 Engineers and technicians </td>
+          <td style="text-align:right;"> 0.026 </td>
+          <td style="text-align:right;"> 0.016 </td>
+          <td style="text-align:right;"> -0.011 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> -0.004 </td>
+          <td style="text-align:right;"> 0.014 </td>
+          <td style="text-align:left;"> -0.021 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;font-size: 14px;" indentlevel="1">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (38%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-132%) </td>
+          <td style="text-align:left;font-size: 14px;"> (194%) </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 109 Writers </td>
+          <td style="text-align:right;"> 0.004 </td>
+          <td style="text-align:right;"> 0.001 </td>
+          <td style="text-align:right;"> -0.003 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.001 </td>
+          <td style="text-align:left;"> -0.004 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;font-size: 14px;" indentlevel="1">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-1%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-30%) </td>
+          <td style="text-align:left;font-size: 14px;"> (131%) </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 105 Legal </td>
+          <td style="text-align:right;"> 0.005 </td>
+          <td style="text-align:right;"> 0.005 </td>
+          <td style="text-align:right;"> -0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.003 </td>
+          <td style="text-align:left;"> -0.003 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;font-size: 14px;" indentlevel="1">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-6%) </td>
+          <td style="text-align:right;font-size: 14px;"> (-1302%) </td>
+          <td style="text-align:left;font-size: 14px;"> (1408%) </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 101 Scientists </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:right;"> 0.000 </td>
+          <td style="text-align:left;"> 0.000 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;">  </td>
+          <td style="text-align:right;font-size: 14px;"> (100%) </td>
+          <td style="text-align:right;font-size: 14px;"> (0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (0%) </td>
+          <td style="text-align:right;font-size: 14px;"> (25%) </td>
+          <td style="text-align:right;font-size: 14px;"> (63%) </td>
+          <td style="text-align:left;font-size: 14px;"> (13%) </td>
+         </tr>
+       </tbody>
+       </table>
+       </main>
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
     <a href="#references" class="anchor"></a>References</h2>
