--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -281,10 +281,9 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
     </figure>
     <p>Decomposing mid-level group changes</p>
     <figure>
-        <img src="images/SpecTechSegregation01.png"
-              loading="lazy" alt="A. Specialists and 
-              technicians 1985-2005" width="600" height="900" />
-            <figcaption>Occupational gender segregation 1985-2005: A. Specialists and 
+        <img src="images/SpecTechDiffs.png"
+              loading="lazy" alt="Decomposition of mid-level group changes 1985-2005" width="600" height="900" />
+            <figcaption>Decomposition of mid-level group changes 1985-2005: A. Specialists and 
                 technicians
             </figcaption>
     </figure>
