add discussion to spectech drill down

--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -18,9 +18,19 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 21 December 2021</p>
 <main>
-<p>This task steps down the occupation classification hierarchy looking at the specialist and technician occupations.</p>
+    <p>Of the <a href="">major occupation groups</a>, specialists and technicians shows 
+    persistently high gender segregation by occupation. This major group includes 
+    stubbornly segregated STEM (see <a href="#UchikoshiEtal2020">Uchikoshi et al, 2020</a>),
+    This task takes a closer look.</p>
+    <p>As a whole, employment of specialists and technicians grew from 6.4 million in 1985 
+        to 8.5 million in 2005, as <a href="DescriptiveStatistics.html">share of total 
+        employment from 11% to 14%</a>. Total spectech employment declined somewhat between 2000 and 2005 
+        with male-dominant engineers and technicians taking the largest hit, from 29% of 
+        this major group in 2000 to 25% in 2005. As a share, teachers' decline from 22% in 
+        1985 to 16% in 2005 occurred mainly between 1985 and 1995.
+    </p>
 <table class="table" style="margin-left: auto; margin-right: auto;">
-    <caption><h4>Descriptive statistics: A. Specialists and technicians</h4></caption>
+    <caption>Descriptive statistics: A. Specialists and technicians</caption>
     <thead>
         <tr>
         <th style="text-align:left;text-align: center;">  </th>
@@ -74,7 +84,8 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         <td style="text-align:right;"> 43 </td>
         <td style="text-align:right;"> 47 </td>
         </tr>
-        <tr grouplength="12"><td colspan="6" style="border-bottom: 1px solid;"><strong>C. Distribution of occupational major groups (%)</strong></td></tr>
+        <tr grouplength="12"><td colspan="6" style="border-bottom: 1px solid;"><strong>
+            C. Distribution of occupational mid-level groups (%)</strong></td></tr>
     <tr>
         <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 101 Scientists </td>
         <td style="text-align:right;"> 2 </td>
@@ -171,7 +182,8 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         <td style="text-align:right;"> 7 </td>
         <td style="text-align:right;"> 8 </td>
         </tr>
-        <tr grouplength="12"><td colspan="6" style="border-bottom: 1px solid;"><strong>D. Female labor force by major groups (%)</strong></td></tr>
+        <tr grouplength="12"><td colspan="6" style="border-bottom: 1px solid;">
+            <strong>D. Female labor force by mid-level groups (%)</strong></td></tr>
     <tr>
         <td style="text-align:left;padding-left: 2em;" indentlevel="1"> 101 Scientists </td>
         <td style="text-align:right;"> 9 </td>
@@ -270,7 +282,21 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         </tr>
     </tbody>
     </table>
-    <p>Changes between 1985 and 2005 by mid-level group</p>
+    <p>Women's participation in the spectech occupations grew from 40% in 1985 
+        to 47% in 2005. Their gains are evident in most mid-level spectech groups. The 
+    only noticable decline was in religious work. Their share of female-dominated 
+healthcare rose further, and was essentially flat in female-dominated social work and 
+entertainment.</p>
+    <p>When total segregation is decomposed into the sum of segregation between 
+        mid-level groups and a weighted sum of segregation scores within these groups, 
+        we see that the between contribution for mid-level spectech groups is more 
+        than double that seen at the <a href="ElbersTotalSegregation.html">major group level</a>. 
+        This implies that these mid-level groups are more gender-specific than the major 
+        groups. The between share is essentially flat from 1985 to 2005, which implies that 
+    existing patterns of gender segregation are being maintained.</p>
+        <p> Male-dominated scientists, legal workers and financial workers show 
+    low levels of segregation, an observation that gets a closer look below. Healthcare 
+occupations include highly gender-specific doctors and nurses.</p>
     <figure>
         <img src="images/SpecTechSegregation01.png"
               loading="lazy" alt="A. Specialists and 
@@ -279,7 +305,16 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
                 technicians
             </figcaption>
     </figure>
-    <p>Decomposing mid-level group changes</p>
+    <p>Women's share of entertainment work remained at 66% over these two decades, but 
+        segregation declined. How can this be? Decomposition of changes in these mid-level 
+        groups (see Figure below) shows that most of the decline in segregation was structural. 
+        Determining whether this is due more to men entering female-dominated occupations 
+        or vice versa requires deeper analysis. In this context, white-collar women's 
+        increased patronage of entertainment (<a href="#Ho2012">Ho, 2012</a>, and 
+        <a href="#Ho2015">Ho, 2015</a>) is worth noting. That occupational margins also 
+        contributed suggests a weakening of existing segregated occupations.
+    </p>
+    <p></p>
     <figure>
         <img src="images/SpecTechDiffs.png"
               loading="lazy" alt="Decomposition of mid-level group changes 1985-2005" width="600" height="900" />
@@ -583,7 +618,13 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
     <p><a id="Elbers2021"></a>Elbers, Benjamin (2021). A Method for Studying Differences in Segregation Across Time and Space. 
         Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
         class="uri">doi:10.18637/jss.v089.i07</a></p>
-    <p>Uchikoshi, Fumiya, Ryota Mugiyama, and Megumi Oguro. (2020) Still Separate in STEM?: Trends in Sex Segregation by Field of Study in Japan, 1975-2019. 
+    <p><a id="Ho2012"></a>Ho, Swee‐Lin. "Tokyo at 10: Establishing difference through the friendship networks of women executives in Japan." 
+        Journal of the Royal Anthropological Institute 18.1 (2012): 83-102.
+    <a href="https://doi.org/10.1111/j.1467-9655.2011.01732.x">https://doi.org/10.1111/j.1467-9655.2011.01732.x</a></p>
+    <p><a id="Ho2015"></a>Ho, Swee-Lin. "‘License to drink’: White-collar female workers and Japan’s urban night space." 
+        Ethnography 16.1 (2015): 25-50. 
+        <a href="https://doi.org/10.1177/1466138113506632">https://doi.org/10.1177/1466138113506632</p>
+    <p><a id="UchikoshiEtal2020"></a>Uchikoshi, Fumiya, Ryota Mugiyama, and Megumi Oguro. (2020) Still Separate in STEM?: Trends in Sex Segregation by Field of Study in Japan, 1975-2019. 
         Institute of Economic Research, Hitotsubashi University. Discussion Paper Series, A710 
         <a href="https://osf.io/txqka/download" class="uri">https://osf.io/txqka/download</a></p>
     </div>    
