--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -307,22 +307,32 @@ occupations include highly gender-specific doctors and nurses.</p>
     </figure>
     <p>Women's share of entertainment work remained at 66% over these two decades, but 
         segregation declined. How can this be? Decomposition of changes in these mid-level 
-        groups (see Figure below) shows that most of the decline in segregation was structural. 
+        groups (see Figure and Table 2 below) shows that most of the decline in segregation was structural. 
         Determining whether this is due more to men entering female-dominated occupations 
         or vice versa requires deeper analysis. In this context, white-collar women's 
         increased patronage of entertainment (<a href="#Ho2012">Ho, 2012</a>, and 
         <a href="#Ho2015">Ho, 2015</a>) is worth noting. That occupational margins also 
         contributed suggests a weakening of existing segregated occupations.
     </p>
-    <p></p>
+    <p>Decomposing changes in total spectech segregation (see Figure) shows that the largest 
+        contribution to change was reduced structural segregation with a lesser contribution 
+        from changes in the gender mix (gender margins). Changes in employment in segregated occupations (occupation 
+        margins) contributed additional segregation. It might be tempting to try to visually sum 
+        contributions in mid-level groups to get the total decomposition; this is readily 
+        feasible because the total is a weighted sum of the mid-levels plus the between, which 
+        is not in this figure and it's not clear whether or not the between term can be further 
+        decomposed.
+    </p>
     <figure>
         <img src="images/SpecTechDiffs.png"
-              loading="lazy" alt="Decomposition of mid-level group changes 1985-2005" width="600" height="900" />
-            <figcaption>Decomposition of mid-level group changes 1985-2005: A. Specialists and 
+              loading="lazy" alt="Decomposition of major group changes 1985-2005" width="600" height="900" />
+            <figcaption>Decomposition of major group changes 1985-2005: A. Specialists and 
                 technicians
             </figcaption>
     </figure>
     <table class="table" style="margin-left: auto; margin-right: auto;">
+        <caption>Decomposition of major group changes 1985-2005: A. Specialists and 
+            technicians</caption>
         <thead>
        <tr>
        <th style="empty-cells: hide;border-bottom:hidden;" colspan="1"></th>
@@ -618,11 +628,11 @@ occupations include highly gender-specific doctors and nurses.</p>
     <p><a id="Elbers2021"></a>Elbers, Benjamin (2021). A Method for Studying Differences in Segregation Across Time and Space. 
         Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
         class="uri">doi:10.18637/jss.v089.i07</a></p>
-    <p><a id="Ho2012"></a>Ho, Swee‐Lin. "Tokyo at 10: Establishing difference through the friendship networks of women executives in Japan." 
-        Journal of the Royal Anthropological Institute 18.1 (2012): 83-102.
+    <p><a id="Ho2012"></a>Ho, Swee‐Lin. (2012) "Tokyo at 10: Establishing difference through the friendship networks of women executives in Japan." 
+        Journal of the Royal Anthropological Institute 18.1: 83-102.
     <a href="https://doi.org/10.1111/j.1467-9655.2011.01732.x">https://doi.org/10.1111/j.1467-9655.2011.01732.x</a></p>
-    <p><a id="Ho2015"></a>Ho, Swee-Lin. "‘License to drink’: White-collar female workers and Japan’s urban night space." 
-        Ethnography 16.1 (2015): 25-50. 
+    <p><a id="Ho2015"></a>Ho, Swee-Lin. (2015) "‘License to drink’: White-collar female workers and Japan’s urban night space." 
+        Ethnography 16.1: 25-50. 
         <a href="https://doi.org/10.1177/1466138113506632">https://doi.org/10.1177/1466138113506632</p>
     <p><a id="UchikoshiEtal2020"></a>Uchikoshi, Fumiya, Ryota Mugiyama, and Megumi Oguro. (2020) Still Separate in STEM?: Trends in Sex Segregation by Field of Study in Japan, 1975-2019. 
         Institute of Economic Research, Hitotsubashi University. Discussion Paper Series, A710 
