add discussion to spectech drill down

--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -2,7 +2,7 @@
     <head>
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="revised" content="21 December 2021" />
+      <meta name="revised" content="22 December 2021" />
         <title>Drill down: A. Specialists and technicians</title>
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
@@ -16,7 +16,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <body>
 <h1>Drill down: A. Specialists and technicians</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
-21 December 2021</p>
+22 December 2021</p>
 <main>
     <p>Of the <a href="">major occupation groups</a>, specialists and technicians shows 
     persistently high gender segregation by occupation. This major group includes 
@@ -320,7 +320,7 @@ occupations include highly gender-specific doctors and nurses.</p>
         margins) contributed additional segregation. It might be tempting to try to visually sum 
         contributions in mid-level groups to get the total decomposition; this is readily 
         feasible because the total is a weighted sum of the mid-levels plus the between, which 
-        is not in this figure and it's not clear whether or not the between term can be further 
+        is not in this figure; it's not clear whether or not the between term can be further 
         decomposed.
     </p>
     <figure>
