add deming stephan reference

--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -316,7 +316,7 @@ occupations include highly gender-specific doctors and nurses.</p>
     </p>
     <p>Decomposing changes in total spectech segregation (see Figure) shows that the largest 
         contribution to change was reduced structural segregation with a lesser contribution 
-        from changes in the gender mix (gender margins). Changes in employment in segregated occupations (occupation 
+        from changes in gender mix (gender margins). Changes in employment in segregated occupations (occupation 
         margins) contributed additional segregation. It might be tempting to try to visually sum 
         contributions in mid-level groups to get the total decomposition; this is readily 
         feasible because the total is a weighted sum of the mid-levels plus the between, which 
@@ -625,6 +625,10 @@ occupations include highly gender-specific doctors and nurses.</p>
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
     <a href="#references" class="anchor"></a>References</h2>
+    <p>Deming, W. E., and Frederick F. Stephan. "On a Least Squares Adjustment of a Sampled Frequency 
+        Table when the Expected Marginal Totals are Known." 
+        The Annals of Mathematical Statistics, vol. 11, no. 4, 1940, pp. 427-444. 
+    <a href="https://www.jstor.org/stable/2235722">https://www.jstor.org/stable/2235722</a></p>
     <p><a id="Elbers2021"></a>Elbers, Benjamin (2021). A Method for Studying Differences in Segregation Across Time and Space. 
         Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
         class="uri">doi:10.18637/jss.v089.i07</a></p>
