intro text for Deming Stephan example

--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -330,6 +330,16 @@ occupations include highly gender-specific doctors and nurses.</p>
                 technicians
             </figcaption>
     </figure>
+    <p>Several of the decompositions listed in Table 2 below warrant a closer look. The change in gender 
+        segregation for 105 Legal, for example, shows a -1302% contribution from gender margins, -6% from 
+        occupational margins, and 1408% from structural change. Elbers decomposes M by estimating the 
+    changes in cell values that would be expected if there were only marginal changes and no structural change. 
+    These expected values are called the 'counterfactuals.'
+    The structural changes are then the differences between these expected values and the actual observed 
+    values. The estimated cell values are calculated using the procedure developed by 
+    <a href="#DemingStephan1940">Deming and Stephan (1940)</a> 
+    for adjusting sampled frequency tables when the expected marginal totals are known. Deming and Stephan 
+    provide a worked example that I will follow below.</p>
     <table class="table" style="margin-left: auto; margin-right: auto;">
         <caption>Decomposition of major group changes 1985-2005: A. Specialists and 
             technicians</caption>
@@ -621,13 +631,19 @@ occupations include highly gender-specific doctors and nurses.</p>
          </tr>
        </tbody>
        </table>
+    <article>
+        <h4>Estimating counterfactuals following <a href="#DemingStephan1940">Deming and Stephan (1940)</a></h4>
+        <p> This procedure adjusts sampled frequency tables when the expected marginal totals are known. In this case, 
+        we want to adjust the gender vs occupation table for 1985 to that which would be expecte for 2005 marginal 
+    totals assuming no structural changes.</p>
+    </article>
        </main>
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
     <a href="#references" class="anchor"></a>References</h2>
-    <p>Deming, W. E., and Frederick F. Stephan. "On a Least Squares Adjustment of a Sampled Frequency 
+    <p><a id="DemingStephan1940"></a>Deming, W. E., and Frederick F. Stephan. (1940) "On a Least Squares Adjustment of a Sampled Frequency 
         Table when the Expected Marginal Totals are Known." 
-        The Annals of Mathematical Statistics, vol. 11, no. 4, 1940, pp. 427-444. 
+        The Annals of Mathematical Statistics, vol. 11, no. 4, pp. 427-444. 
     <a href="https://www.jstor.org/stable/2235722">https://www.jstor.org/stable/2235722</a></p>
     <p><a id="Elbers2021"></a>Elbers, Benjamin (2021). A Method for Studying Differences in Segregation Across Time and Space. 
         Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
