--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -656,6 +656,32 @@ occupations include highly gender-specific doctors and nurses.</p>
         <tr><td>Other spectech</td><td>2555759</td><td>3789332</td><td>6345091</td><td></td><td>4018698</td><td>4465215</td><td>8483913</td></tr>
         <tr><td>Marginal total</td><td>2559343</td><td>3828462</td><td>6387805</td><td></td><td>4027379</td><td>4514554</td><td>8541933</td></tr>
     </table>
+    <p></p>
+    <table>
+        <caption>TABLE 1 from Deming and Stephan (1940) adapted for this task</caption>
+        <tr style="border: 1px solid black;"><td colspan=3>Gender</td><td>Female</td><td>Male</td></tr>
+        <tr style="border: 1px solid black;"><td colspan=3 style="text-align: right">j =</td><td>1</td><td>2</td><td>\(n_{i.}\)</td></tr>
+        <tr style="border: 1px solid black;"><td colspan=3 style="text-align: right">\(\lambda_{.i}\) =</td><td>0.3957</td><td>0</td><td>\(m_{i.}\)</td></tr>
+        <tr style="border: 1px solid black;"><td>Occupation</td><td style="text-align: center">i</td><td style="text-align: center">\(\lambda_{i.}\)</td></tr>
+        <tr style="border: 1px solid black;"><td rowspan=2>Judges, lawyers</td><td rowspan=2>1</td><td>0.3441</td><td>789</td><td>15204</td><td>15993</td></tr>
+        <tr style="border: 1px solid black;"><td></td><td><i>1373</i></td><td><i>20435</i></td><td><i>21808</i></td></tr>
+        <tr style="border: 1px solid black;"><td rowspan=2>Other legal</td><td rowspan=2>2</td><td>0.3138</td><td>2795</td><td>23926</td><td>26721</td></tr>
+        <tr style="border: 1px solid black;"><td></td><td><i>4778</i></td><td><i>31434</i></td><td><i>36212</i></td></tr>
+        <tr style="border: 1px solid black;"><td rowspan=2>Other spectech</td><td rowspan=2>3</td><td>0.1777</td><td>2555759</td><td>3789332</td><td>6345091</td></tr>
+        <tr style="border: 1px solid black;"><td></td><td><i>4021228</i></td><td><i>4462685</i></td><td><i>8482913</i></td></tr>
+        <tr style="border: 1px solid black;"><td></td><td></td><td style="text-align: center">\(n_{.i}\)</td><td>2559343</td><td>3828462</td><td>6387805</td></tr>
+        <tr style="border: 1px solid black;"><td></td><td></td><td style="text-align: center">\(m_{.i}\)</td><td><i>4027379</i></td><td><i>4514554</i></td><td><i>8541933</i></td></tr>
+    </table>
+    <p></p>
+    <table>
+        <caption>TABLE 2 from Deming and Stephan (1940) adapted for this task</caption>
+        <tr><td></td><td colspan=2 style="text-align: center">j =</td><td style="text-align: center">\(m_{i.}/\sqrt{n_{i.}}\)</td><td style="text-align: center">Sum</td></tr>
+        <tr><td>i</td><td>1</td><td>2</td></tr>
+        <tr><td>1</td><td>6.24</td><td>120.22</td><td>172.45</td><td>298.91</td></tr>
+        <tr><td>2</td><td>17.10</td><td>146.37</td><td>221.53</td><td>384.99</td></tr>
+        <tr><td>3</td><td>1014.61</td><td>1504.33</td><td>3368.04</td><td>5886.99</td></tr>
+        <tr><td>Sum</td><td>1037.95</td><td>1770.92</td><td>3762.01</td><td>6570.89</td></tr>
+    </table>
     </article>
        </main>
 <div id="references" class="section level2">
