add to solution

--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -662,7 +662,7 @@ occupations include highly gender-specific doctors and nurses.</p>
     two-dimensional case, we seek the values of <i>\(m_{ij}\)</i> that minimize 
     $$\tag{3}S = \sum\frac{(m_{ij}-n_{ij})^2}{n_{ij}}$$ where I number the equations as in Deming and Stephan (1940). 
     Following their <i>Case II: Both sets of marginal totals known</i>, assume \(N_{1.}, N_{2.}, \cdots, N_{r.}\) to be 
-    known. We require $$\tag{4}\sum_{j}m_{ij} = m_{i.},\hspace{60pt} i = 1, 2, \cdots, r.$$ and 
+    known. We require $$\tag{4}\sum_{j}m_{ij} = m_{i.},\hspace{60pt} i = 1, 2, \cdots, r.$$ (from Case I) and 
     $$\tag{5}\sum_{i}m_{ij} = m_{.j},\hspace{60pt} j = 1, 2, \cdots, s-1.$$conditions on the 
     adjusted \(m_{ij}\), a total of \(r+s-1\) conditions. For both cases, $$\tag{6}m_{i.}=N_{i.}n/N,$$
     $$\tag{7}m_{.j}=N_{.j}n/N.$$ In other words, \(m_{i.}\) and \(m_{.j}\) are the deflated marginal totals, 
@@ -671,6 +671,7 @@ occupations include highly gender-specific doctors and nurses.</p>
     small variation \(\delta m_{ij}\); then the differentials of eqs. (3), (4) and (5) give 
     $$\tag{10}\frac{1}{2}\delta S=\sum \{(m_{ij}-n_{ij})/n_{ij}\}\delta m_{ij}=0 \hspace{20pt} \verb!(one equation),!$$ 
     $$\tag{11}\sum_{j} \delta m_{ij} = 0,\hspace{40pt} i = 1, 2, \cdots, r, \hspace{20pt} \verb!(r equations)!$$
+    (eqs. (10) and (11) being shared with Case I)
     $$\tag{17}\sum_{i} \delta m_{ij} = 0,\hspace{40pt} j = 1, 2, \cdots, s-1, \hspace{20pt} \verb!(s-1 equations)!.$$ 
     By adding eqs. (10), (11) and (17), after multiplying eq. (11<i>i</i>) by the Lagrange multiplier \(-\lambda_{i.}\) and eq. (17<i>j</i>) 
     by \(-\lambda_{.j}\), we get 
