--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -683,7 +683,7 @@ occupations include highly gender-specific doctors and nurses.</p>
     $$\tag{20} n_{i.} \lambda_{i.} + \sum_{j}n_{ij}\lambda_{.j} = m_{i.}-n_{i.}, \hspace{40pt} i = 1, 2, \cdots, r  $$
     $$\sum_{i} n_{ij} \lambda_{i.} + n_{.j} \lambda_{.j}  = m_{.j}-n_{.j}, \hspace{40pt} j = 1, 2, \cdots, s-1. $$
     </p>
-    <p></p>
+    <p>The top row of eqs (20) solved</p>
     <table>
         <caption>TABLE 1 from Deming and Stephan (1940) adapted for this task</caption>
         <tr style="border: 1px solid black;"><td colspan=3>Gender</td><td>Female</td><td>Male</td></tr>
