change to own latex.css

--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -5,7 +5,8 @@
       <meta name="revised" content="22 December 2021" />
         <title>Drill down: A. Specialists and technicians</title>
 
-        <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
+        <!--<link rel="stylesheet" href="https://latex.now.sh/style.css"> --> 
+        <link rel="stylesheet" href="https://alanintsukuba.github.io/latex.css">
         <link rel="stylesheet" href="https://alanintsukuba.github.io/ShowReferencesModal.css"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/v4-shims.min.css">
 <!-- mathjax --><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js" 
@@ -687,7 +688,7 @@ occupations include highly gender-specific doctors and nurses.</p>
     $$\tag{21} \lambda_{i.} = (1/n_{i.})\{m_{i.} - \sum_{j} n_{ij}\lambda_{.j} \} - 1.$$
     Substituted into the bottom row of eqs. (20), this gives the \(s - 1 \) normal equations.
     </p>
-    <table style="counter-increment: null ;">
+    <table class="noincrement">
         <tr><td style="text-align:center">\(\lambda_{.1}\)</td>
             <td style="text-align:center">\(\lambda_{.2}\)</td>
             <td style="text-align:center">\(...\)</td>
