--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -31,7 +31,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         1985 to 16% in 2005 occurred mainly between 1985 and 1995.
     </p>
 <table class="table noincrement" style="margin-left: auto; margin-right: auto;">
-    <caption><b>Table 1</b>Descriptive statistics: A. Specialists and technicians</caption>
+    <caption class="noincrement"><b>Table 1</b>Descriptive statistics: A. Specialists and technicians</caption>
     <thead>
         <tr>
         <th style="text-align:left;text-align: center;">  </th>
@@ -342,7 +342,7 @@ occupations include highly gender-specific doctors and nurses.</p>
     for adjusting sampled frequency tables when the expected marginal totals are known. Deming and Stephan 
     provide a worked example that I will follow below.</p>
     <table class="table noincrement" style="margin-left: auto; margin-right: auto;">
-        <caption><b>Table 2. </b>Decomposition of major group changes 1985-2005: A. Specialists and 
+        <caption class="noincrement"><b>Table 2. </b>Decomposition of major group changes 1985-2005: A. Specialists and 
             technicians</caption>
         <thead>
        <tr>
@@ -648,7 +648,7 @@ occupations include highly gender-specific doctors and nurses.</p>
         from the uncompressed case.
     </p>
     <table class="noincrement">
-        <caption><b>Table 3. </b>Actual occupation vs gender frequencies for legal occupations in 1985 and 2005</caption>
+        <caption class="noincrement"><b>Table 3. </b>Actual occupation vs gender frequencies for legal occupations in 1985 and 2005</caption>
         <tr><th></th><th colspan=3>1985</th><th></th><th colspan=3>2005</th></tr>
         <tr><td></td><td colspan=2>Gender</td><td></td><td></td><td colspan=2>Gender</td></tr>
         <tr><td>Occupation</td><td>Female</td><td>Male</td><td>Marginal total</td><td></td><td>Female</td><td>Male</td><td>Marginal total</td></tr>
@@ -745,7 +745,7 @@ occupations include highly gender-specific doctors and nurses.</p>
         for 1985 and the marginal totals for 2005. 
     </p>
     <table class="noincrement">
-        <caption><b>Table 4. </b>A table showing the counterfactuals of the numbers of females and males in the occupational categories judges and lawyers, other legal, and other spectech from 
+        <caption class="noincrement"><b>Table 4. </b>A table showing the counterfactuals of the numbers of females and males in the occupational categories judges and lawyers, other legal, and other spectech from 
             the 1985 Population Census as computed for the 2005 Population Census
     <br>(TABLE 1 from Deming and Stephan (1940) adapted for this task)</caption>
         <tr style="border: 1px solid black;"><td colspan=3>Gender</td><td>Female</td><td>Male</td></tr>
@@ -763,7 +763,7 @@ occupations include highly gender-specific doctors and nurses.</p>
     </table>
     <p></p>
     <table class="noincrement">
-        <caption ><b>Table 5. </b>TABLE 2 from Deming and Stephan (1940) adapted for this task</caption>
+        <caption class="noincrement"><b>Table 5. </b>TABLE 2 from Deming and Stephan (1940) adapted for this task</caption>
         <tr><td></td><td colspan=2 style="text-align: center">j =</td><td style="text-align: center">\(m_{i.}/\sqrt{n_{i.}}\)</td><td style="text-align: center">Sum</td></tr>
         <tr><td>i</td><td>1</td><td>2</td></tr>
         <tr><td>1</td><td>6.24</td><td>120.22</td><td>172.45</td><td>298.91</td></tr>
