work on autoincrement

--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -647,7 +647,7 @@ occupations include highly gender-specific doctors and nurses.</p>
         occupations, but the estimated counterfactual frequencies for the legal occupations of interest will not differ 
         from the uncompressed case.
     </p>
-    <table class="noincrement">
+    <table class="noincrement" style="counter-increment: null;">
         <caption class="noincrement"><b>Table 3. </b>Actual occupation vs gender frequencies for legal occupations in 1985 and 2005</caption>
         <tr><th></th><th colspan=3>1985</th><th></th><th colspan=3>2005</th></tr>
         <tr><td></td><td colspan=2>Gender</td><td></td><td></td><td colspan=2>Gender</td></tr>
